--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "gh-pages": "^3.1.0",
-    "homepage": "https://harishpumbhadia.github.io/sorting_visualizer_project",
+    "homepage": "https://harishpumbhadia.github.io/Sorting-Visualizer",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
